<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/countryCodeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="136dp"
            android:text="@string/app_title"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

        <requestFocus />

        <EditText
            android:id="@+id/userPasswordEditText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22dp"
            android:background="@drawable/textview_border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/forgotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@null"
            android:text="@string/forgot_password"
            android:textColor="@color/gray" />

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100" >

            <Button
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="25dp"
                android:background="@drawable/button"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/loginButton"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_weight="50"
                android:background="@drawable/button"
                android:padding="5dp"
                android:text="@string/singup"
                android:textColor="@color/gray"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>