<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.traxit.main"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    android:weightSum="100" >

    <com.traxit.widget.RoundedImageView
        android:id="@+id/friendPhotoView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:contentDescription="@string/desc_list_item_icon"
        android:src="@drawable/user_profile_photo"
        app:border_color="@color/gray"
        app:border_width="1dp"
        app:corner_radius="20dp" />

    <TextView
        android:id="@+id/lblCellTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center_vertical"
        android:layout_toRightOf="@+id/friendPhotoView"
        android:text="@string/cell_title"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/btnDecline"
        android:background="@drawable/cell_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/accept"
        android:textColor="@color/gray"
        android:onClick="acceptOnClickListener" />

    <Button
        android:id="@+id/btnDecline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignBaseline="@+id/btnAccept"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/cell_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/decline"
        android:textColor="@color/red" />

</RelativeLayout>