<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.traxit.main"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    >

<LinearLayout 
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_color"
    android:orientation="vertical"
    android:padding="20dp" >

         <com.traxit.widget.RoundedImageView
             android:id="@+id/userProfileImageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:contentDescription="@string/image_description"
             android:scaleType="fitCenter"
             android:src="@drawable/img_user_placeholder"
             app:border_color="@color/white"
             app:border_width="2dp"
             app:corner_radius="50dp" />

          <TextView
                android:id="@+id/userEmailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/email"
                android:textColor="@color/gray"
                android:textSize="20sp" />
           <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/first_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/textview_border"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <requestFocus />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/last_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/textview_border"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/countryCodeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/phone_number"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50" >

                <ImageView
                    android:id="@+id/flagButton"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/country_flag"
                    android:src="@drawable/cn" />

                <TextView
                    android:id="@+id/callingCodeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/country_code"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/lblSubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:background="@drawable/textview_border"
                android:ems="10"
                android:inputType="phone" />
        </LinearLayout>

</LinearLayout>
</ScrollView>
