<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.traxit.main.MemberActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/titlebar_gradient" >

        <Button
            android:id="@+id/titlebarLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_right_button"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/titlebarTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/friends"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/titlebarRightButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_right_button"
            android:padding="10dp"
            android:text="@string/add"
            android:textColor="@color/gray"
            android:textSize="18sp"
            android:visibility="gone" />

    </RelativeLayout>

    <ListView
        android:id="@+id/memberList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:divider="@color/white"
        android:dividerHeight="1dp" >

    </ListView>


</LinearLayout>